# WJ_PlayGround

./: .gitignore  CMakeLists.txt  ClionTest.cpp  ClionTest.h
Source/HelloCMake/: CMakeConfig.h.in  CMakeMain.cpp
Source/OptiXDevice/: CMakeLists.txt  CUDABuffer.h  IcoSphere.h  LaunchParams.h  OptiXRenderer.cpp  OptiXRenderer.h  TriangleMesh.h  TriangleMeshMaterial.h  devicePrograms.cu  toneMap.cu
Source/OptiXDevice/cmake/: FindOptiX.cmake  configure_optix.cmake
Source/OptiXDevice/gdt/: gdt.cpp
Source/OptiXDevice/gdt/math/: constants.h  vec.h
Source/OptiXDevice/gdt/random/: random.h
Source/PathTracing/: PTImagePNG.h  PTScene.cpp  PTScene.h  main.cpp
Source/PathTracing/Core/: CommonShape.cpp  CommonShape.h  PTAPI.h  PTBasicDefine.h  PTCamera.cpp  PTCamera.h  PTMacroDefine.h  PTMaterial.cpp  PTMaterial.h  PTRandom.h  PTSceneDesc.h  PTSceneObjectDesc.cpp  PTSceneObjectDesc.h  PTShapeDesc.h  RayIntersectDesc.h
Source/PathTracing/PTApp/: PTScene.cpp  PTScene.h  main.cpp
Source/PathTracingApp/: CMakeLists.txt  devicePrograms.cu
Source/PathTracingApp/OptiXImpl/: PTAppOptixScene.cpp  PTAppOptixScene.h
Source/PathTracingApp/PTAppWindow/: CameraFrame.cpp  CameraFrame.h  PTAppWindow.cpp  PTAppWindow.h
Source/PathTracingApp/Source/: OptiXTest.cpp  OptiXTest.h  PTScene.cpp  PTUtil.cpp  PTUtil.h  main.cpp
Source/PathTracingCore/: CMakeLists.txt
Source/PathTracingCore/Source/: CommonShape.cpp  CommonShape.h  PTAPI.h  PTBasicDefine.h  PTSceneDesc.cpp  PTSceneObjectDesc.cpp  PTSceneObjectDesc.h  PTShapeDesc.h
Source/VKApp/: CMakeLists.txt
Source/VKApp/Source/: VKDrawTriangle.cpp  VKMain.cpp
